# agent2

./: .gitignore  LICENSE  pyproject.toml
.OUTDATED_agent2_depreciated/: element.py  file.py
.OUTDATED_agent2_depreciated/agent/: tool_settings_depreciated.py
.OUTDATED_agent2_depreciated/agent_rework/: TODO.txt
.OUTDATED_agent2_depreciated/parsing/code_parsers/: parse_csharp.py  parse_python.py
.OUTDATED_agent2_depreciated/tools_common/input_tools/: searching.py  viewing.py
.OUTDATED_agent2_depreciated/utils/: agent_utils.py  embeddings_model_demo.py  utils.py
.agents/rules/: terminal.md
OUTDATED_agent2_depreciated/agent/: agent_depreciated.py  tool.py  tool_formatter.py
OUTDATED_agent2_depreciated/agent/smolagents/: local_python_executor.py
OUTDATED_agent2_depreciated/agent_rework/: agent.py  boundtool.py  element.py  event.py  file.py  interaction.py  jsontoolbox.py  memories.py  memory.py  tool.py  toolbox.py  toolresponse.py  workspace.py
OUTDATED_agent2_depreciated/parsing/: parser.py
OUTDATED_agent2_depreciated/parsing/code_parsers/: parse_java.py  parse_javascript.py
OUTDATED_agent2_depreciated/tools_common/: finish_tools.py
OUTDATED_agent2_depreciated/tools_common/output_tools/: editing.py
scripts/: tool_server.py
src/agent2.egg-info/: PKG-INFO  SOURCES.txt
src/agent2/aux/: indentation.py
src/agent2/code_parser/: code_file.py  dataclasses.py  (+2 more)
tests/: test_pipeline_end_to_end.py  test_tool_call_builders.py  test_tool_call_extractors.py  test_tool_call_roundtrip.py  test_tool_schema_builders.py  test_tool_validator.py
tests/code_parser_tests/: test_python_parser.py
tests/tool_api_tests/: test_generic_response_builder.py  test_pipeline_end_to_end.py  test_tool_call_builders.py  test_tool_call_extractors.py  test_tool_call_roundtrip.py  test_tool_schema_builders.py  test_tool_validator.py
(+55 files in other folders)
