[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent2"
version = "0.1.0"
description = "A basic agent library"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
