[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent2"
version = "0.1.0"
description = "A basic agent library"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.0",
    "httpx>=0.28.1",
    "pandas>=3.0.3",
    "pytest>=9.1.1",
    "requests>=2.34.2",
    "streamlit>=1.58.0",
    "tree-sitter>=0.25.2",
    "tree-sitter-c>=0.24.2",
    "tree-sitter-c-sharp>=0.23.5",
    "tree-sitter-cpp>=0.23.4",
    "tree-sitter-java>=0.23.5",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-python>=0.25.0",
    "uvicorn>=0.49.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = [
    "src",
]
